fix text fields align

--- a/src/app/components/checkout-page/checkout-page.component.scss
+++ b/src/app/components/checkout-page/checkout-page.component.scss
@@ -4,14 +4,29 @@
 
   &container {
     min-height: 100%;
-    height: fit-content;
+    //height: fit-content;
+    //height: 90%;
     width: 80%;
-    padding: 30px 0 30px 0;
+    //padding: 30px 0 30px 0;
+    padding-top: 30px;
     display: flex;
     justify-content: space-between;
+
+    .mat-form-field {
+      line-height: 14px !important;
+    }
+
+    ::ng-deep .mat-form-field-label-wrapper {
+      top: -16px !important;
+    }
+
+    ::ng-deep .mat-button-toggle-button {
+      margin-top: -5px;
+    }
   }
 
   &info-zone {
+    height: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,23 +36,35 @@
     -webkit-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
     -moz-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
     box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+    padding-bottom: 10px;
+    background-image: url("~src/assets/images/page2.png");
+    background-repeat: repeat-y;
 
     &-title {
       width: 70%;
-      font-size: 22px;
+      font-size: 25px;
       font-weight: bold;
       letter-spacing: 2px;
       margin-top: 20px;
-      margin-bottom: 10px;
+      //margin-bottom: 10px;
       color: $black-lalivraison;
+      display: flex;
+      align-items: center;
+      //background-color: lightpink;
+
+      &-image {
+        height: 50px;
+        width: 50px;
+        margin-left: 15px;
+      }
     }
 
     &-button {
       border-radius: 50px;
-      width: 62%;
+      width: 40%;
       padding: 0 15px 0 15px;
       color: white;
-      height: 50px;
+      height: 45px;
       font-size: 15px;
       letter-spacing: 1px;
     }
@@ -47,23 +74,28 @@
       background-color: $gray-lalivraison;
       border-radius: 50px;
       padding: 0 15px 0 15px;
-      height: 50px;
+      height: 40px;
       font-size: 14px;
+      //display: flex;
+      //flex-direction: column;
+      //justify-content: center;
 
       &-margin {
         margin-left: 10px;
+        margin-bottom: -10px;
+        //margin-top: 10px;
       }
     }
 
     &-toggle {
       width: 62%;
       border-radius: 50px;
-      height: 50px;
+      height: 40px;
       font-size: 14px;
 
       &-button {
         width: 50%;
-        height: 50px;
+        height: 40px;
       }
     }
   }
@@ -80,13 +112,99 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
       width: 100%;
       height: 70%;
       border-radius: 10px 10px 0 0;
       -webkit-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
       -moz-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
       box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+
+      &-items {
+        padding-top: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        height: fit-content;
+      }
+
+      &-bill {
+        font-family: Lato;
+        width: 80%;
+        padding: 0 15px 0 15px;
+        min-height: 100px;
+        border-radius: 15px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        -webkit-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+
+        &-line {
+          width: 85%;
+          display: flex;
+          justify-content: space-between;
+
+          &-price {
+            color: $blue-lalivraison;
+            font-weight: bold;
+          }
+
+          &-separator {
+            width: 85% !important;
+            color: lightgray;
+          }
+        }
+      }
+
+      &-item {
+        padding: 0 10px 0 20px;
+        //margin-top: -10px;
+
+
+        width: 80%;
+        min-height: 80px;
+        border-radius: 15px;
+        display: flex;
+        align-items: center;
+        //background-color: white;
+        margin-bottom: 10px;
+        -webkit-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+        -moz-box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+        box-shadow: 0px -1px 8px 1px rgba(0, 0, 0, 0.3);
+
+
+
+
+        &-image {
+          height: 45px;
+          width: 45px;
+          border-radius: 10px;
+          margin-right: 10px;
+          //margin-left: 5px;
+        }
+
+        &-details {
+          display: flex;
+          flex-direction: column;
+          margin-left: 10px;
+
+          &-name {
+            font-weight: bold;
+            font-size: 14px;
+          }
+
+          &-text {
+            font-weight: bold;
+
+            &-price {
+              color: $blue-lalivraison;
+            }
+          }
+        }
+      }
     }
 
     &-header {
@@ -97,7 +215,7 @@
       min-height: 80px;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: space-around;
 
       &-text {
         color: white;
@@ -125,12 +243,20 @@
       justify-content: center;
       height: 100%;
       width: 100%;
-      padding: 20px 0 15px 0;
+      padding: 60px 0 15px 0;
       overflow-x: hidden;
       overflow-y: scroll;
 
       .mat-button-toggle-checked {
         background-color: $blue-lalivraison !important;
+      }
+
+      ::ng-deep .mat-form-field-label-wrapper {
+        top: -10px !important;
+      }
+
+      ::ng-deep .mat-button-toggle-button {
+        margin-top: 0px;
       }
     }
 
@@ -139,14 +265,22 @@
       padding-bottom: 5px;
       min-height: fit-content;
       margin-bottom: 15px;
+      background-image: none;
 
       &-title {
         width: 90%;
         font-size: 18px;
         font-weight: bold;
-        letter-spacing: 0.5px;
+        letter-spacing: 0px;
         margin-top: 20px;
         margin-bottom: 20px;
+        //background-color: lightpink;
+
+        &-image {
+          height: 40px;
+          width: 40px;
+          margin-left: 10px;
+        }
       }
 
       &-text-field {
@@ -160,6 +294,7 @@
 
         &-margin {
           margin-left: 10px;
+          margin-bottom: 0;
         }
       }
 
@@ -180,7 +315,7 @@
     }
 
     &order-zone {
-
+      width: 90%;
     }
 
   }
